--- a/build.gradle
+++ b/build.gradle
@@ -43,5 +43,7 @@ dependencies {
 	// https://mvnrepository.com/artifact/org.webjars/jquery
 	compile group: 'org.webjars', name: 'jquery', version: '3.3.1-1'
 
+	compile ('org.springframework.boot:spring-boot-starter-actuator')
+
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
